# xpgp

./: .gitignore  .hgsub  .hgsubstate  Makefile  Makefile.am  README  autogen.sh  cextrae.f  compute_polynomial.1  configure.ac  copydata.f  downhill.f  downhilld.f  editor.f  exec_function1.f  exec_function2.f  fextrae.f  find_nearest.f  fitpol.f  fitpoley.f  fitpoleyb.f  fits_printerror.f  give_errors.f  give_statistics.f  histogram.f  ifbutton.f  iofunctions.f  labels.f  leenewfile.f  linreg.f  linregexy.f  ludcmp.f  merge_knots.f  nfixedmax.inc  onlyone.f  ordena1f1i.f  otherfit.f  polfit.f  pseudofit.f  randomizedata.f  (+25 more)
auxdir/: Makefile.am
button/: Makefile.am  button.f  configure.ac  ifbutton.f
button/m4/: pgplot.m4
button/src/: button.inc  rpgband.f  rpgbegok.f
m4/: Makefile.am
src/: Makefile.am  binsearch.f  button.f  button.inc  buttqbr.f  buttqcf.f  buttqch.f  buttqex.f  buttqit.f  buttqpr.f  buttqxb.f  buttqyb.f  buttqytext.f  buttsbr.f  buttscf.f  buttsch.f  buttsex.f  buttsit.f  buttspr.f  buttsxb.f  buttsyb.f  buttsytext.f  cextrae.f  chupper.f  cleantab.f  combpf.f  copydata.f  cubspl.f  cubsplx.f  downhill.f  downhilld.f  editor.f  exec_function1.f  exec_function1.f.in  exec_function2.f  exec_function2.f.in  factorialpf.f  fcompil.inc.in  fextrae.f  find_nearest.f  (+79 more)
