#
# $Id$
#
xpgpdir = $(AUXDIR)
dist_xpgp_DATA = compute_polynomial.1 \
                 ../src/downhill.f \
                 ../src/fextrae.f \
                 ../src/indexr.f \
                 ../src/iofunctions.f \
                 ../src/statistic.f \
                 ../src/truebeg.f \
                 ../src/truelen.f
