## Process this file with automake to produce Makefile.in

## $Id$

bin_PROGRAMS = xpgp
xpgp_SOURCES = cextrae.f chupper.f copydata.f downhill.f downhilld.f editor.f \
exec_function1.f exec_function2.f fextrae.f find_nearest.f fitpol.f \
fitpoley.f fitpoleyb.f fmean0.f give_errors.f give_statistics.f histogram.f \
iofunctions.f ks_func.f ksone.f labels.f leenewfile.f linreg.f linregexy.f \
linregey.f ludcmp.f lusolv.f onlyone.f ordena1f.f ordena1f1i.f \
plot_settings.f probks.f sfitpol.f show_buffers.f show_fitpol.f slinreg.f \
spearman.f statistic.f truebeg.f truelen.f updatekey.f updatelimits.f \
updateplot.f xpgp.f yfunkd_linregexy.f ranred_.c redsystem_.c \
ndatamax.inc  nsimul.inc  xpgpdir.inc 
xpgp_LDADD = $(top_builddir)/button/libbutton.la

dist_pkgdata_DATA = iofunctions.f statistic.f truebeg.f truelen.f fextrae.f \
downhill.f

