#
bin_PROGRAMS = xpgp
xpgp_SOURCES =  \
fcompil.inc \
ndatamax.inc \
nsimulmax.inc \
version.inc \
binsearch.f \
button.f \
buttqbr.f \
buttqcf.f \
buttqch.f \
buttqex.f \
buttqit.f \
buttqpr.f \
buttqxb.f \
buttqyb.f \
buttqytext.f \
buttsbr.f \
buttscf.f \
buttsch.f \
buttsex.f \
buttsit.f \
buttspr.f \
buttsxb.f \
buttsyb.f \
buttsytext.f \
cextrae.f \
chupper.f \
cleantab.f \
combpf.f \
copydata.f \
cubspl.f \
cubsplx.f \
downhilld.f \
downhill.f \
editor.f \
exec_function1.f \
exec_function2.f \
factorialpf.f \
fextrae.f \
findmml.f \
find_nearest.f \
fitpoleyb.f \
fitpoley.f \
fitpol.f \
fits_printerror.f \
fmean0.f \
fpoly.f \
give_errors.f \
give_statistics.f \
histogram.f \
ifbutton.f \
indexr.f \
iofunctions.f \
ks_func.f \
ksone.f \
labels.f \
leenewfile.f \
linregexy.f \
linregey.f \
linreg.f \
ludcmp.f \
lusolv.f \
merge_knots.f \
norm_ranges.f \
onlyone.f \
ordena1f1i.f \
ordena1f.f \
otherfit.f \
plot_settings.f \
polfit.f \
probks.f \
pseudofit.f \
randomizedata.f \
ranred.f \
ranspl.f \
read_nb.f \
rpgband.f \
rpgbegin.f \
rpgbegok.f \
rpgenv.f \
rpgerasb.f \
rpgeras.f \
rpgerasw.f \
selbuffer.f \
sfitpol.f \
show_buffers.f \
show_fitpol.f \
slinreg.f \
spearman.f \
splfit.f \
statistic.f \
systemfunction.f \
tolog77.f \
truebeg.f \
truelen.f \
updatekey.f \
updatelimits.f \
updateplot.f \
xpgp.f \
yfunkd_linregexy.f \
yfunk_pseudo.f \
yfunk_splfit1.f \
yfunk_splfit2.f \
yfunk_splfit3.f \
yfunk_splfit.f
